# cs-demand-model-regional

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.json  d.py  manage.py  out.csv  pyproject.toml  test.py
.github/workflows/: dependabot_slack.yml  tests.yml
accounts/: adapter.py  admin.py  backends.py  forms.py  models.py  signals.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_force_password_update.py  0003_add_admin_group.py
accounts/tests/: test_change_password.py  test_email_backend.py  test_require_mfa.py
cs_demand_model/: __init__.py  datacontainer.py
dm_regional_app/: admin.py  apps.py  backends.py  builder.py  charts.py  decorators.py  filters.py  fixtures.py  forms.py  models.py  plotly.py  predictor.py  signals.py  tables.py  urls.py  utils.py  views.py
dm_regional_app/middleware/: force_mfa_middleware.py  scenario_middleware.py  update_password_middleware.py
dm_regional_app/migrations/: 0001_initial.py  0002_profile.py  0003_profile_la.py  0003_savedscenario_sessionscenario_delete_scenario.py  0004_remove_savedscenario_prediction_filters_and_more.py  0005_alter_savedscenario_adjusted_costs_and_more.py  0005_savedscenario_adjusted_proportions_and_more.py  0006_alter_savedscenario_adjusted_costs_and_more.py  0006_savedscenario_inflation_parameters_and_more.py  0007_datasource.py  0008_datasource_end_date_datasource_start_date.py  0009_rename_show_instructions_profile_show_filtering_instructions_and_more.py  0010_rename_end_date_datasource_data_end_date_and_more.py
dm_regional_app/templatetags/: custom_filters.py  custom_tags.py  table_tags.py
dm_regional_app/tests/: test_data_upload.py  test_dynamicrateform.py  test_email_verification.py  test_scenario_detail_view.py  test_scenarios_view.py
dm_regional_site/: asgi.py  settings.py  urls.py  wsgi.py
dm_regional_site/settings/: __init__.py  base.py  development.py  (+2 more)
docs/: SSO.md  architecture.md  authentication.md  deployment.md  local_development.md  smoke_testing.md  user_types.md
infrastructure/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  staging.tfvars  variables.tf
samples/: __init__.py
ssda903/: __init__.py  __main__.py  costs.py  datacontainer.py  multinomial.py  population_stats.py  predictor.py  reader.py  utils.py
(+82 files in other folders)
