[tool.poetry]
name = "cs-demand-model-regional"
version = "0.2.0"
description = ""
authors = ["kws", "franciscobmacedo", "amynickolls", "MichaelHanksSF"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.10"
demand-model = "^0.2.0"
plotly = "^5.18.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
