[tool.poetry]
name = "cs-demand-model-regional"
version = "0.2.0"
description = ""
authors = ["kws", "franciscobmacedo", "amynickolls", "MichaelHanksSF"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.10"
demand-model = "^0.2.0"
plotly = "^5.18.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
python-decouple = "^3.8"
faker = "^23.3.0"
django-bootstrap-datepicker-plus = "^5.0.5"
django-select2 = "^8.1.2"
django-tables2 = "^2.7.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
