[tool.poetry]
name = "cs-demand-model-regional"
version = "0.2.0"
description = ""
authors = ["kws", "franciscobmacedo", "amynickolls", "MichaelHanksSF"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.26"
demand-model = "^0.2.0"
plotly = "^5.18.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
python-decouple = "^3.8"
faker = "^23.3.0"
django-bootstrap-datepicker-plus = "^5.0.5"
django-select2 = "^8.4.1"
django-tables2 = "^2.7.0"
django-filter = "^24.3"
whitenoise = "^6.6.0"
psycopg2 = "^2.9.9"
dj-database-url = "^2.1.0"
django-sekizai = "^4.1.0"
gunicorn = "^23.0.0"
django-allauth = {extras = ["mfa", "socialaccount"], version = "^65.11.1"}
django-storages = {extras = ["s3"], version = "^1.14.4"}
sentry-sdk = "^2.17.0"



[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
